--- a/eCommerce-App/.eslintrc.json
+++ b/eCommerce-App/.eslintrc.json
@@ -1,17 +1,23 @@
 {
-    "plugins": ["import", "@typescript-eslint"],
-    "extends": [
-        "eslint-config-airbnb-base",
-        "airbnb-typescript/base",
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "project": "./tsconfig.json"
-    },
-    "rules": {
-        "no-console": 0,
-        "@typescript-eslint/no-explicit-any": 2
-    }
+  "plugins": ["prettier", "import", "@typescript-eslint"],
+  "extends": [
+    "eslint-config-airbnb-base",
+    "airbnb-typescript/base",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "env": {
+    "es6": true,
+    "browser": true
+  },
+  "rules": {
+    "no-console": 0,
+    "@typescript-eslint/no-explicit-any": 2
+  }
 }
