--- a/eCommerce-App/package.json
+++ b/eCommerce-App/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "3.2.5",
@@ -36,8 +37,5 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  },
-  "dependencies": {
-    "eslint-plugin-prettier": "^5.1.3"
   }
 }
