--- a/eCommerce-App/package.json
+++ b/eCommerce-App/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "start": "webpack serve --open --mode=development",
+    "build:prod": "webpack --config ./webpack.config.js --env mode=prod",
+    "build:dev": "webpack serve --open --config ./webpack.config.js --env mode=dev",
     "format": "npx prettier --write .",
     "ci:format": "npx prettier --check .",
     "lint": "npx eslint src/**/*.ts"
@@ -36,6 +36,7 @@
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
   }
 }
