--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "webpack --config ./webpack.config.js --env mode=prod",
-    "build:dev": "webpack serve --open --config ./webpack.config.js --env mode=dev",
+    "build:dev": "webpack --config ./webpack.config.js --env mode=dev",
+    "start": "webpack serve --open --mode=development",
     "format": "npx prettier --write .",
     "ci:format": "npx prettier --check .",
     "lint": "npx eslint src/**/*.ts"
