--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ecommerce-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:prod": "webpack --config ./webpack.config.js --env mode=prod",
-    "build:dev": "webpack --config ./webpack.config.js --env mode=dev",
+    "build:prod": "webpack --env mode=prod",
+    "build:dev": "webpack --env mode=dev",
     "start": "webpack serve --open --mode=development",
     "format": "npx prettier --write .",
     "ci:format": "npx prettier --check .",
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.12.8",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "copy-webpack-plugin": "^12.0.2",
@@ -33,6 +35,7 @@
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
