--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "prettier": "3.2.5",
     "sass": "^1.76.0",
     "sass-loader": "^14.2.1",
