--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv-webpack": "^7.0.7",
     "@types/node": "^20.12.8",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "css-loader": "^7.1.1",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
