--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,6 @@
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
+*.webp binary
+*.mp3 binary
+*.svg binary
