--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build:prod": "webpack --env mode=prod",
     "build:dev": "webpack --env mode=dev",
     "start": "webpack serve --mode=development",
