--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
   "dependencies": {
     "@commercetools/platform-sdk": "^7.8.0",
     "@commercetools/sdk-client-v2": "^2.5.0"
+  },
+  "volta": {
+    "node": "20.12.2",
+    "npm": "10.5.0"
   }
 }
