--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "normalize.css": "^8.0.1",
     "prettier": "3.2.5",
