--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "husky": "^9.0.11",
     "mini-css-extract-plugin": "^2.9.0",
     "normalize.css": "^8.0.1",
     "prettier": "3.2.5",
