--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,7 @@
   "extends": [
     "eslint-config-airbnb-base",
     "airbnb-typescript/base",
-    "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -18,6 +16,14 @@
   },
   "rules": {
     "no-console": 0,
-    "@typescript-eslint/no-explicit-any": 2
+    "@typescript-eslint/no-explicit-any": 2,
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1,
+        "ArrayExpression": "first"
+      }
+    ]
   }
 }
