--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
+    "sourceMap": true,
     "paths": {
       "@Src/*": ["./src/*"],
       "@Assets/*": ["./src/assets/*"],
