--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^8.57.0",
