--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,6 @@
   },
   "rules": {
     "no-console": 0,
-    "@typescript-eslint/no-explicit-any": 2,
+    "@typescript-eslint/no-explicit-any": 2
   }
 }
