feat: add env LOCALE

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ CTP_CLIENT_ID=client-string-id
 CTP_AUTH_URL=https://auth.our-region.gcp.commercetools.com
 CTP_API_URL=https://api.our-region.gcp.commercetools.com
 CTP_SCOPES="manage_my_business_units:board-game-shop create_anonymous_token:board-game-shop manage_my_shopping_lists:board-game-shop view_tax_categories:board-game-shop view_categories:board-game-shop view_published_products:board-game-shop view_discount_codes:board-game-shop view_cart_discounts:board-game-shop manage_my_payments:board-game-shop view_shipping_methods:board-game-shop manage_my_orders:board-game-shop manage_my_quote_requests:board-game-shop manage_my_profile:board-game-shop manage_my_quotes:board-game-shop view_types:board-game-shop view_customers:board-game-shop"
+LOCALE=en-GB
