--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.1.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
     "identity-obj-proxy": "^3.0.0",
@@ -44,6 +45,7 @@
     "sass": "^1.76.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "svg-inline-loader": "^0.8.2",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
