--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/dotenv-webpack": "^7.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.8",
+    "@types/node-fetch": "^2.6.11",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.1.0",
+    "fetch-mock-jest": "^1.5.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
@@ -57,7 +59,8 @@
   },
   "dependencies": {
     "@commercetools/platform-sdk": "^7.8.0",
-    "@commercetools/sdk-client-v2": "^2.5.0"
+    "@commercetools/sdk-client-v2": "^2.5.0",
+    "node-fetch": "^3.3.2"
   },
   "volta": {
     "node": "20.12.2",
